# device_board_oniro

./: .gitignore  README.en.md  README.md  README_zh.md
rpi3/: BUILD.gn  README_zh.md  config.gni  device.gni  make_rpi_sdcard_image.py  ohos.build
rpi3/bluetooth/: BUILD.gn
rpi3/camera/: BUILD.gn
rpi3/camera/demo/include/: project_camera_demo.h
rpi3/camera/device_manager/: BUILD.gn
rpi3/camera/device_manager/include/: project_hardware.h
rpi3/camera/device_manager/src/: bm2835.cpp
rpi3/camera/driver_adapter/test/: BUILD.gn
rpi3/camera/driver_adapter/test/unittest/include/: utest_v4l2_dev.h
rpi3/camera/driver_adapter/test/unittest/src/: utest_v4l2_dev.cpp
rpi3/camera/driver_adapter/test/v4l2_test/include/: project_v4l2_main.h
rpi3/camera/pipeline_core/: BUILD.gn
rpi3/camera/pipeline_core/src/ipp_algo_example/: ipp_algo_example.c
rpi3/cfg/: BUILD.gn  fstab.required  fstab.rpi3  init.rpi3.cfg  init.rpi3.usb.cfg  init.without_two_stages.cfg
rpi3/distributedhardware/: BUILD.gn
rpi3/firmware/: BUILD.gn
rpi3/image/: BUILD.gn  README.md  build_bootimg.py
rpi3/image/rpi3boot/: cmdline.txt  config.txt  start.elf
rpi3/kernel/: 32_kernel_build.sh  64_kernel_build.sh  BUILD.gn  build_kernel.py  build_kernel.sh  check_build.sh  check_patch.sh  make_kernel.mk  make_kernel.sh  module_build.sh
rpi3/kernel/configs/: bcm2711_oh_32_defconfig  bcm2711_oh_defconfig
rpi3/kernel/rpi3boot/: cmdline.txt  config.txt
rpi3/modules/: BUILD.gn  modules_path.gni
rpi3/patches/: .gitignore  001_window_manager.patch  hdf.patch  hdf_patch.sh  modetest.patch  openharmony_kernel_patch.py  peripheral.patch  weston.patch
rpi3/test/: BUILD.gn
rpi3/test/bluez/: hciattach.c  hciattach_bcm43xx.c  hciattach_qualcomm.c  hciattach_ti.c  hciattach_tialt.c
rpi3/test/bluez/src/: textfile.h  util.h
rpi3/test/framebuffer_test/: framebuffer_test.c
rpi3/test/glmark2/: BUILD.gn
rpi3/test/modeset_double_buffer/: modeset_double_buffer.c
rpi3/test/modeset_plane_test/: modeset_plane_test.c
rpi3/test/modeset_single_buffer/: modeset_single_buffer.c
rpi3/test/native_window_ohos/: Makefile  gl_test  native_main
rpi3/test/native_window_ohos/src/: canvas.h  native-state-ohos.cpp  native-state-ohos.h  ohos_wrapper_linker.cpp  ohos_wrapper_linker.h  shared-library.h
rpi3/test/native_window_wrapper/: BUILD.gn  native_window_wrapper.cpp
rpi4/: BUILD.gn  README_zh.md  bundle.json  device.gni  ohos.build
rpi4/bluetooth/: BUILD.gn
rpi4/bluetooth/include/: bt_vendor_brcm.h
rpi4/bluetooth/src/: hardware.c
rpi4/camera/: BUILD.gn
rpi4/camera/device_manager/: BUILD.gn
rpi4/camera/driver_adapter/: BUILD.gn
rpi4/camera/driver_adapter/test/: BUILD.gn
rpi4/camera/driver_adapter/test/unittest/src/: utest_v4l2_dev.cpp
rpi4/camera/driver_adapter/test/v4l2_test/: BUILD.gn
rpi4/camera/metadata_manager/: BUILD.gn
rpi4/camera/pipeline_core/: BUILD.gn
rpi4/cfg/: BUILD.gn  fstab.required  fstab.rpi4  init.modprobe.sh  init.rpi4.cfg  init.rpi4.usb.cfg  init.without_two_stages.cfg
rpi4/distributedhardware/: BUILD.gn
rpi4/firmware/: BUILD.gn
rpi4/image/: BUILD.gn  README.md  build_bootimg.py  make_rpi_sdcard_image.py  ptgen
rpi4/image/rpi4boot/: cmdline.txt  config.txt
rpi4/kernel/: 32_kernel_build.sh  64_kernel_build.sh  BUILD.gn  build_kernel.sh  check_patch.sh  make_kernel.mk  make_kernel.sh  module_build.sh
rpi4/kernel/configs/: bcm2711_oh_32_defconfig  bcm2711_oh_defconfig
rpi4/modules/: .gitignore  BUILD.gn
rpi4/modules/lib/modules/5.10.97-v8/: modules.alias  modules.builtin  modules.builtin.modinfo  modules.dep  modules.devname  modules.order  modules.softdep  modules.symbols
rpi4/modules/lib/modules/5.10.97-v8/kernel/crypto/: adiantum.ko  af_alg.ko  algif_aead.ko  algif_hash.ko  algif_rng.ko  algif_skcipher.ko  authenc.ko  authencesn.ko  blake2b_generic.ko  cast5_generic.ko  cast_common.ko  ccm.ko  chacha20poly1305.ko  chacha_generic.ko  cmac.ko  cryptd.ko  crypto_simd.ko  crypto_user.ko  ctr.ko  deflate.ko  drbg.ko  ecc.ko  ecdh_generic.ko  echainiv.ko  essiv.ko  gcm.ko  gf128mul.ko  ghash-generic.ko  jitterentropy_rng.ko  lz4.ko  md4.ko  md5.ko  michael_mic.ko  nhpoly1305.ko  poly1305_generic.ko  seqiv.ko  tgr192.ko  wp512.ko  xcbc.ko  xor.ko  (+2 more)
rpi4/modules/lib/modules/5.10.97-v8/kernel/fs/: binfmt_misc.ko
rpi4/modules/lib/modules/5.10.97-v8/kernel/kernel/: configs.ko
rpi4/modules/lib/modules/5.10.97-v8/kernel/lib/: crc-ccitt.ko  crc7.ko  crc8.ko  lru_cache.ko  ts_bm.ko  ts_fsm.ko  ts_kmp.ko
rpi4/modules/lib/modules/5.10.97-v8/kernel/mm/: z3fold.ko  zsmalloc.ko
rpi4/patches/: 001_window_manager.patch  002_grapic_2d.patch  base_patch.sh  build.patch  fingerprint_auth.patch  graphic_2d.diff  hdf_patch.sh  openharmony_kernel_patch.py
rpi4/test/: BUILD.gn
rpi4/test/bluez/: BUILD.gn  hciattach_ath3k.c  hciattach_intel.c  hciconfig.c  hcitool.c
rpi4/test/bluez/lib/: hci.c  hci.h
rpi4/test/bluez/src/: textfile.c  util.c
rpi4/test/glmark2/: BUILD.gn  res_path.gni
rpi4/test/modeset_atomic_crtc/: modeset_atomic_crtc.c
rpi4/test/modeset_atomic_plane/: modeset_atomic_plane.c
rpi4/test/modeset_page_flip/: modeset_page_flip.c
rpi4/test/native_window_ohos/: Makefile  main.cpp
rpi4/test/native_window_ohos/include/: native_window_wrapper.h
rpi4/test/native_window_ohos/src/: canvas-generic.cpp  canvas-generic.h  gl-headers.h  gl-state-egl.cpp  gl-state-egl.h  gl-state.h  gl-visual-config.h  native-state-ohos.cpp  native-state-ohos.h  native-state.h  ohos_wrapper_linker.cpp  ohos_wrapper_linker.h  options.cpp
rpi4/test/native_window_wrapper/: BUILD.gn  native_window_wrapper.h
rpi4/test/vsynctest/: BUILD.gn  vsynctest.c
rpi4_small/linux/: BUILD.gn  config.gni  ohos.build
rpi4_small/linux/distributedhardware/: BUILD.gn
rpi4_small/linux/kernel/: BUILD.gn  copy_res.sh
rpi4_small/linux/kernel/configs/: rpi4_small_small_defconfig
rpi4_small/linux/kernel/rpi4_small_patch/: rpi4_small.patch
rpi4_small/linux/system/: BUILD.gn
rpi4_small/linux/system/cfg/: BUILD.gn  init.rpi4_small.cfg
rpi4_small/linux/test/: BUILD.gn
(+1572 files in other folders)
