# Copyright (c) 2022 Diemit <598757652@qq.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")


ohos_prebuilt_etc("regulatory.db") {
  source = "regulatory.db"
  part_name = "raspberrypi_products"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware"
  install_enable = true
}

ohos_prebuilt_etc("regulatory.db.p7s") {
  source = "regulatory.db.p7s"
  part_name = "raspberrypi_products"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware"
  install_enable = true
}

ohos_prebuilt_etc("brcm.BCM4345C0") {
  source = "brcm/BCM4345C0.hcd"
  part_name = "raspberrypi_products"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware/brcm"
  install_enable = true
}

ohos_prebuilt_etc("brcm.BCM4345C5") {
  source = "brcm/BCM4345C5.hcd"
  part_name = "raspberrypi_products"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware/brcm"
  install_enable = true
}

ohos_prebuilt_etc("brcm.brcmfmac43455-sdio") {
  source = "brcm/brcmfmac43455-sdio.bin"
  part_name = "raspberrypi_products"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware/brcm"
  install_enable = true
}

ohos_prebuilt_etc("brcm.brcmfmac43455-sdio.clm_blob") {
  source = "brcm/brcmfmac43455-sdio.clm_blob"
  part_name = "raspberrypi_products"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware/brcm"
  install_enable = true
}

ohos_prebuilt_etc("brcm.brcmfmac43455-sdio.txt") {
  source = "brcm/brcmfmac43455-sdio.txt"
  part_name = "raspberrypi_products"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware/brcm"
  install_enable = true
}

ohos_prebuilt_etc("brcm.brcmfmac43456-sdio") {
  source = "brcm/brcmfmac43456-sdio.bin"
  part_name = "raspberrypi_products"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware/brcm"
  install_enable = true
}

ohos_prebuilt_etc("brcm.brcmfmac43456-sdio.clm_blob") {
  source = "brcm/brcmfmac43456-sdio.clm_blob"
  part_name = "raspberrypi_products"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware/brcm"
  install_enable = true
}

ohos_prebuilt_etc("brcm.brcmfmac43456-sdio.txt") {
  source = "brcm/brcmfmac43456-sdio.txt"
  part_name = "raspberrypi_products"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware/brcm"
  install_enable = true
}


group("firmware") {
  deps = [
    ":regulatory.db",
    ":regulatory.db.p7s",
    ":brcm.BCM4345C0",
    ":brcm.BCM4345C5",
    ":brcm.brcmfmac43455-sdio",
    ":brcm.brcmfmac43455-sdio.clm_blob",
    ":brcm.brcmfmac43455-sdio.txt",
    ":brcm.brcmfmac43456-sdio",
    ":brcm.brcmfmac43456-sdio.clm_blob",
    ":brcm.brcmfmac43456-sdio.txt",
  ]
}
