# Copyright (c) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/clang/clang.gni")
import("//build/ohos.gni")

output_dir = "$root_build_dir/packages/phone"
action("rpi4_bootimg") {
    script = "build_bootimg.py"
    outputs = [ "$output_dir/images/boot.img" ]
    args = [ "bootimg", rebase_path(output_dir) ]
}


action("firmware") {
  deps = [ ":rpi4_bootimg" ]
  script = "make_rpi_sdcard_image.py"
  outputs = [ "$root_build_dir/packages/phone/images/firmware.img" ]
  args = [
    "--output",
    rebase_path("$root_build_dir/packages/phone/images/firmware.img"),
    "--userdata",
    "2000M",
    rebase_path("$root_build_dir/packages/phone/images/boot.img"),
    rebase_path("$root_build_dir/packages/phone/images/system.img"),
    rebase_path("$root_build_dir/packages/phone/images/vendor.img"),
    rebase_path("$root_build_dir/packages/phone/images/userdata.img"),
  ]
}