# Copyright (c) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/clang/clang.gni")
import("//build/ohos.gni")
import("//build/ohos/kernel/kernel.gni")

linux_kernel_version = "linux-5.10"
kernel_source_dir = "//kernel/linux/$linux_kernel_version"

# 判断内核编译类型
kernel_image = ""
defconfig_file = ""
if (target_cpu == "arm") {
  kernel_image = "zImage"
  defconfig_file = "bcm2711_oh_32_defconfig"
} else if (target_cpu == "arm64") {
    kernel_image = "Image"
    defconfig_file = "bcm2711_oh_defconfig"
}

group("rpi4_kernel") {

    deps = [
      ":check_patch",
      ":check_build",
      ":rpi4_build_kernel",
    ]
}

action("check_patch") {
  script = "check_patch.sh"
  outputs = [ "$root_out_dir/../KERNEL_OBJ/kernel/src_tmp/$linux_kernel_version" ]

  args = [
    rebase_path("//"),
    linux_kernel_version
  ]
}

action("check_build") {
  script = "check_build.sh"
  sources = [ kernel_source_dir ]
  outputs = [ "$root_build_dir/kernel.timestamp" ]
  args = [
    rebase_path(kernel_source_dir, root_build_dir),
    rebase_path("$root_build_dir/packages/phone/images/$kernel_image"),
    rebase_path("$root_build_dir/kernel.timestamp"),
  ]
}

action("rpi4_build_kernel") {
    script = "make_kernel.sh"
    sources = [ kernel_source_dir ]

    product_path = "vendor/$product_company/$product_name"

    outputs = [ "$root_build_dir/packages/phone/images/$kernel_image" ]

    args = [
      rebase_path("//"),
      product_path,
      target_cpu,
      linux_kernel_version,
      kernel_image,
      "$defconfig_file",
      rebase_path("$root_build_dir/packages/phone/images"),
    ]
    
    if (enable_ramdisk) {
      args += [ "enable_ramdisk" ]
    }

    print("kernel args=$args")
    deps = [
      ":check_build",
      ":check_patch",
    ]
}
