# Copyright (c) 2022 Diemit <598757652@qq.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("modules_path.gni")

modules_deps = []

foreach(item, modules_files) {
    name = item
    path = get_path_info(name, "dir")
    ohos_prebuilt_etc("$name") {
        source = "$name"
        install_enable = true
        install_images = [ system_base_dir ]
        module_install_dir = "$path"
        part_name = "device_rpi4"
    }
    modules_deps += [ ":$name" ]
}

group("modules_group") {
  deps = modules_deps
}
