# Copyright (c) 2022 Diemit <598757652@qq.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_executable("modetest") {

  sources = [
    "//third_party/libdrm/tests/modetest/buffers.c",
    "//third_party/libdrm/tests/modetest/cursor.c",
    "//third_party/libdrm/tests/modetest/modetest.c",
    "//third_party/libdrm/tests/util/format.c",
    "//third_party/libdrm/tests/util/kms.c",
    "//third_party/libdrm/tests/util/pattern.c",
  ]

  cflags_c = [
    "-Wno-unused-variable",
  ]

  include_dirs = [
    "//third_party/libdrm/tests",
    "//third_party/libdrm/tests/util",
    "//third_party/libdrm/tests/modetest",
  ]

  deps = [
    "//third_party/libdrm:libdrm",
  ]

  part_name = "raspberrypi_products"
  install_images = [ "system" ]
  install_enable = true
}

ohos_prebuilt_executable("gl_test") {
  source = "native_window_ohos/gl_test"
  part_name = "raspberrypi_products"
  install_images = [ "system" ]
  install_enable = true
}

group("test") {
  deps = [
    ":modetest",
    # "native_window_wrapper:native_window_wrapper",
    # ":gl_test",
    # "glmark2:glmark2_group",
    # "bluez:bluez",
  ]

}