import("//build/ohos.gni")

ohos_executable("hciconfig") {
  sources = [
    "hciconfig.c",
    "src/textfile.c",
    "src/util.c",
    "lib/bluetooth.c",
    "lib/hci.c",
  ]

  cflags = [
      "-Wno-pointer-arith",
  ]

  include_dirs = [ 
    "./lib",
    "./src",
  ]

  deps = [ ]

  part_name = "raspberrypi_products"
  install_enable = true
}

ohos_executable("hcitool") {
  sources = [
    "hcitool.c",
    "src/oui.c",
    "lib/bluetooth.c",
    "lib/hci.c",
  ]

  cflags = [
      "-Wno-pointer-arith",
  ]

  include_dirs = [ 
    "./lib",
    "./src",
  ]

  deps = [ ]

  part_name = "raspberrypi_products"
  install_enable = true
}

ohos_executable("hciattach") {
  sources = [
    "hciattach.c",
    "hciattach_ath3k.c",
    "hciattach_bcm43xx.c",
    "hciattach_intel.c",
    "hciattach_qualcomm.c",
    "hciattach_st.c",
    "hciattach_ti.c",
    "hciattach_tialt.c",
    "lib/bluetooth.c",
    "lib/hci.c",
  ]

  cflags = [
      "-Wno-pointer-arith",
  ]

  include_dirs = [ 
    "./",
  ]

  deps = [ ]

  part_name = "raspberrypi_products"
  install_enable = true
}

group("bluez") {
  deps = [
    ":hciconfig",
    ":hcitool",
    ":hciattach",
  ]
}