# Copyright (c) 2022 Diemit <598757652@qq.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

res_files = [
  "data/shaders/desktop.vert",
  "data/shaders/light-basic-texgen.vert",
  "data/shaders/ideas-lamp-unlit.frag",
  "data/shaders/ideas-logo.vert",
  "data/shaders/shadow.vert",
  "data/shaders/ideas-paper.vert",
  "data/shaders/text-renderer.vert",
  "data/shaders/terrain.frag",
  "data/shaders/conditionals.frag",
  "data/shaders/pulsar-light.vert",
  "data/shaders/light-basic.vert",
  "data/shaders/loop-step-simple.all",
  "data/shaders/light-phong.frag",
  "data/shaders/terrain-texture.vert",
  "data/shaders/ideas-logo-flat.frag",
  "data/shaders/ideas-table.vert",
  "data/shaders/bump-height.vert",
  "data/shaders/desktop-blur.frag",
  "data/shaders/bump-normals.vert",
  "data/shaders/function-step-medium.all",
  "data/shaders/bump-normals-tangent.frag",
  "data/shaders/terrain.vert",
  "data/shaders/shadow.frag",
  "data/shaders/light-basic-tex-bilinear.frag",
  "data/shaders/depth.vert",
  "data/shaders/bump-normals.frag",
  "data/shaders/terrain-noise.frag",
  "data/shaders/conditionals-step-simple.all",
  "data/shaders/terrain-normalmap.frag",
  "data/shaders/ideas-lamp-lit.frag",
  "data/shaders/README.shaders",
  "data/shaders/ideas-logo-flat.vert",
  "data/shaders/ideas-under-table.frag",
  "data/shaders/jellyfish.vert",
  "data/shaders/ideas-under-table.vert",
  "data/shaders/jellyfish.frag",
  "data/shaders/terrain-overlay.frag",
  "data/shaders/text-renderer.frag",
  "data/shaders/ideas-logo-shadow.vert",
  "data/shaders/loop.frag",
  "data/shaders/loop-step-loop.all",
  "data/shaders/light-refract.vert",
  "data/shaders/light-basic-tex.frag",
  "data/shaders/function.vert",
  "data/shaders/depth.frag",
  "data/shaders/ideas-table.frag",
  "data/shaders/light-advanced.frag",
  "data/shaders/light-phong.vert",
  "data/shaders/ideas-paper.frag",
  "data/shaders/bump-normals-tangent.vert",
  "data/shaders/function-call.all",
  "data/shaders/bump-poly.vert",
  "data/shaders/loop.vert",
  "data/shaders/pulsar.vert",
  "data/shaders/ideas-lamp-unlit.vert",
  "data/shaders/function-step-low.all",
  "data/shaders/light-refract.frag",
  "data/shaders/ideas-text.frag",
  "data/shaders/light-advanced.vert",
  "data/shaders/gradient.frag",
  "data/shaders/terrain-luminance.frag",
  "data/shaders/ideas-logo.frag",
  "data/shaders/light-basic.frag",
  "data/shaders/conditionals.vert",
  "data/shaders/gradient.vert",
  "data/shaders/ideas-logo-shadow.frag",
  "data/shaders/bump-poly.frag",
  "data/shaders/conditionals-step-conditional.all",
  "data/shaders/bump-height.frag",
  "data/shaders/ideas-text.vert",
  "data/shaders/effect-2d-convolution.frag",
  "data/shaders/effect-2d.vert",
  "data/shaders/light-cel.frag",
  "data/shaders/function.frag",
  "data/shaders/buffer-wireframe.frag",
  "data/shaders/ideas-lamp-lit.vert",
  "data/shaders/buffer-wireframe.vert",
  "data/shaders/terrain-blur.frag",
  "data/shaders/desktop.frag",
  "data/models/horse.3ds",
  "data/models/cat.3ds",
  "data/models/asteroid-low.3ds",
  "data/models/cube.3ds",
  "data/models/asteroid-high.3ds",
  "data/models/jellyfish.jobj",
  "data/models/bunny.obj",
  "data/textures/jellyfish-caustics-12.png",
  "data/textures/jellyfish-caustics-08.png",
  "data/textures/jellyfish-caustics-31.png",
  "data/textures/effect-2d.png",
  "data/textures/asteroid-normal-map-tangent.png",
  "data/textures/terrain-grasslight-512.jpg",
  "data/textures/jellyfish-caustics-23.png",
  "data/textures/jellyfish-caustics-01.png",
  "data/textures/jellyfish-caustics-04.png",
  "data/textures/jellyfish-caustics-18.png",
  "data/textures/jellyfish256.png",
  "data/textures/jellyfish-caustics-06.png",
  "data/textures/jellyfish-caustics-13.png",
  "data/textures/asteroid-height-map.png",
  "data/textures/jellyfish-caustics-26.png",
  "data/textures/jellyfish-caustics-21.png",
  "data/textures/jellyfish-caustics-05.png",
  "data/textures/jellyfish-caustics-20.png",
  "data/textures/crate-base.png",
  "data/textures/jellyfish-caustics-11.png",
  "data/textures/jellyfish-caustics-24.png",
  "data/textures/jellyfish-caustics-07.png",
  "data/textures/desktop-window.png",
  "data/textures/asteroid-normal-map.png",
  "data/textures/jellyfish-caustics-10.png",
  "data/textures/desktop-shadow.png",
  "data/textures/terrain-backgrounddetailed6.jpg",
  "data/textures/jellyfish-caustics-28.png",
  "data/textures/jellyfish-caustics-09.png",
  "data/textures/glyph-atlas.png",
  "data/textures/jellyfish-caustics-15.png",
  "data/textures/desktop-shadow-corner.png",
  "data/textures/nasa2.png",
  "data/textures/nasa1.png",
  "data/textures/jellyfish-caustics-25.png",
  "data/textures/jellyfish-caustics-16.png",
  "data/textures/jellyfish-caustics-29.png",
  "data/textures/jellyfish-caustics-32.png",
  "data/textures/jellyfish-caustics-30.png",
  "data/textures/terrain-grasslight-512-nm.jpg",
  "data/textures/jellyfish-caustics-14.png",
  "data/textures/jellyfish-caustics-22.png",
  "data/textures/jellyfish-caustics-27.png",
  "data/textures/jellyfish-caustics-03.png",
  "data/textures/jellyfish-caustics-19.png",
  "data/textures/jellyfish-caustics-02.png",
  "data/textures/nasa3.png",
  "data/textures/jellyfish-caustics-17.png",
  ]