# Copyright (c) Hisilicon Technologies Co., Ltd. 2021-2021. All rights reserved
import("//build/ohos.gni")

ohos_shared_library("native_window_wrapper") {
  sources = ["native_window_wrapper.cpp"]
  include_dirs = [
      "."
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-cast-qual",
    "-Wno-pointer-arith",
    "-Wno-unused-parameter",
    "-Wno-unused-variable",
    "-Wno-delete-incomplete",
  ]

  deps = [
    "//foundation/window/window_manager/wm:libwm",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
  ]

  part_name = "raspberrypi_products"
  install_images = [ system_base_dir ]
}