# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("fstab.Hi3516DV300") {
  source = "../updater/config/fstab.Hi3516DV300"
  module_install_dir = "etc"
  install_images = [ vendor_base_dir ]
  part_name = "rpi4_small_products"
}

ohos_prebuilt_etc("vb_config_user.ini") {
  source = "../updater/config/vb_config_user.ini"
  module_install_dir = "./"
  install_images = [ vendor_base_dir ]
  part_name = "rpi4_small_products"
}

ohos_prebuilt_etc("logo.rgb") {
  source = "../updater/logo.rgb"
  module_install_dir = "./"
  install_images = [ vendor_base_dir ]
  part_name = "rpi4_small_products"
}

group("sys_files") {
  deps = [
    ":fstab.Hi3516DV300",
    ":logo.rgb",
    ":vb_config_user.ini",
  ]
}
