# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_prebuilt_etc("init.rpi4_small.cfg") {
  source = "init.rpi4_small.cfg"
  if (!enable_ramdisk) {
    install_images = [ "system" ]
  } else {
    install_images = [ vendor_base_dir ]
  }
  part_name = "rpi4_small_products"
}

ohos_prebuilt_etc("init.rpi4_small.usb.cfg") {
  source = "init.rpi4_small.usb.cfg"
  if (!enable_ramdisk) {
    install_images = [ "system" ]
  } else {
    install_images = [ vendor_base_dir ]
  }
  part_name = "rpi4_small_products"
}

ohos_prebuilt_etc("init.rpi4_small.updater.cfg") {
  source = "init.rpi4_small.updater.cfg"
  install_images = [ "updater" ]
  part_name = "rpi4_small_products"
}

group("init_configs") {
  deps = [
    ":init.rpi4_small.cfg",
    ":init.rpi4_small.updater.cfg",
    ":init.rpi4_small.usb.cfg",
  ]
}
